<resources>
    <string name="app_name">GraduationProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="personal">Personal Page</string>
    <string name="following">Following</string>
    <string name="joining">Joining</string>
    <string name="about">About Us</string>
    <string name="see"><![CDATA[See More>>]]></string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont">Dont Have An Account</string>
    <string name="register_now"><u>Register Now</u>></string>
    <string name="forget_password">Forget password ?</string>
    <string name="instructor">Instructor</string>
    <string name="select_time">Select Time</string>
    <string name="title">Title</string>
    <string name="desc">Descreption</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="duration">Duration</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="open_gps">Open GPS</string>
    <string name="get_location">Select Location</string>
    <string name="please_open_gps">Open GPS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="no_detected_address">No Detected Address</string>
    <string name="max">Max Of Attendence</string>
    <string name="current">Current Attend</string>
    <string name="cancel">Cancel</string>
    <string name="cancelJoin">Cancel Join</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthdate">Birthdate</string>
    <string name="phone">Phone</string>
    <string name="posts">Post</string>
    <string name="notification">Notification</string>
    <string name="takephoto">Take Photo</string>
    <string name="choosegallery">Choose Gallery</string>
    <string name="cancel_dialog">Cancel Dialog</string>
    <string name="add_photo">Select Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="PleaseEnterYourEmail">Please Enter Your Email</string>
    <string name="pleaseEnterPassword">please Enter Password</string>
    <string name="requiredField">Require Field</string>
    <string name="dontMatch">Don\'t Match</string>
    <string name="createUserWithEmailFailure">createUserWithEmailFailure</string>
    <string name="emailSent">Please Check Your Email</string>
    <string name="bio">Bio</string>
    <string name="pleaseEnterBio">Please Enter Bio</string>
    <string name="followers">Follower</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="AddCourse">Add Course</string>
    <string name="follow">Follow</string>
    <string name="pleaseOpenGPS">Open GPS</string>
    <string name="join">Join</string>
    <string name="course">Course</string>
    <string name="type">Type</string>
    <string name="home">Home</string>
    <string name="search">Search Here</string>

    <string name="search_string">Filter</string>
    <string name="using_violation_number">Using violation number</string>
    <string name="using_car_plate">Using car plate</string>
    <string name="all">Show All</string>
</resources>
