<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:elevation="20dp"
            app:cardCornerRadius="30dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <ImageView
                android:tint="@color/colorBlack"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add" />

        </android.support.v7.widget.CardView>

        <LinearLayout
                android:gravity="center|start"
            android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <RadioButton
                    android:checked="true"
                    android:text="@string/course"
                    android:id="@+id/radioCourse"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/posts"
                android:id="@+id/radioPost"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/title"
                android:textSize="14dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:inputType="text"
                android:padding="7dp"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/desc"
                android:textSize="14dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtdesc"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:gravity="start"
                android:inputType="text"
                android:padding="7dp"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/price"
                android:textSize="14dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtPrice"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:inputType="number"
                android:padding="7dp"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/location"
                android:textSize="14dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/edtLocation"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:inputType="text"
                android:padding="7dp"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/address"
                android:textSize="14dp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/edtAdress"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center|start"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:hint="@string/start"
                android:id="@+id/edtstart"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:inputType="text"
                android:padding="7dp"
                android:textSize="10sp" />

            <TextView
                android:gravity="center"
                android:hint="@string/end"
                android:id="@+id/edtend"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:inputType="text"
                android:padding="7dp"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/max"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtattendence"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:inputType="number"
                android:padding="7dp"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/current"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtcurrent"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_txt"
                android:elevation="5dp"
                android:inputType="number"
                android:padding="7dp"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">



            <Button
                android:id="@+id/btncancelJoin"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_btn"
                android:elevation="5dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/AddCourse"
                android:textColor="@color/colorWhite"
                android:textSize="12dp" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>