<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fillViewport="true"
    android:background="@color/colorWhite"
    tools:ignore="MissingDefaultResource,RtlCompat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_marginTop="20dp"
            android:layout_above="@+id/c"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />


        <android.support.v7.widget.CardView
            android:id="@+id/c"
            android:layout_centerInParent="true"
            app:cardElevation="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="30dp"
            android:layout_width="match_parent"
            android:layout_height="325dp">



            <RelativeLayout
                android:id="@+id/r"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <LinearLayout
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/shape_txt"
                        android:focusedByDefault="true"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:inputType="textPassword"
                        android:background="@drawable/shape_txt"
                        android:textSize="14sp"
                        android:layout_marginTop="15dp"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:textSize="12sp"
                            android:id="@+id/forget"
                            android:padding="5dp"
                            android:layout_alignParentRight="true"
                            android:text="@string/forget_password"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content" />


                    </RelativeLayout>






                    <Button
                        android:elevation="5dp"
                        android:id="@+id/btuLogin"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/shape_btn"
                        android:text="@string/login"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"/>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/dont"
                            android:textColor="@color/colorBlack"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/register_now"
                            android:textSize="12sp" />

                    </LinearLayout>




                </LinearLayout>



            </RelativeLayout>





        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>