<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/colorWhite"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/c"
            app:contentPadding="10dp"
            android:layout_centerInParent="true"
            app:cardElevation="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <LinearLayout
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgPhoto"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <EditText
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:textColor="@color/colorBlack"
                    android:padding="7dp"
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_txt"
                    android:focusedByDefault="true"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textSize="14sp" />

                <EditText
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:textColor="@color/colorBlack"
                    android:padding="7dp"
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_txt"
                    android:focusedByDefault="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

                <EditText
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/edtPassword"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_txt"
                    android:textSize="14sp"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    />

                <EditText
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/edtConfirmPassword"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_txt"
                    android:textSize="14sp"
                    android:hint="@string/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    />

                <Button
                    android:elevation="5dp"
                    android:id="@+id/btnRegister"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/shape_btn"
                    android:text="@string/register"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"/>

            </LinearLayout>





        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>